# icpi

./: .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  README.md  backup.sh  cpu.yml  create-sweep.sh  docker-compose.yml  flake.nix  gpu-03.yml  gpu-47.yml  gpu.yml  interact.sh  join-existing-sweep.yml  join-sweep.sh  patch.py  plot.py  pyproject.toml  run-cpu.sh  run-gpu.sh  run.sh  upload_completions.py  wait_time_estimate.py
config/: eight-chain.yml
gql/: __init__.py  env.py  example.py  gpt3.py  main.py  model.py  train.py
gqn/: bandit.py  bandit_inferences.py  bandit_metrics.py  base_env.py  cartpole.py  catch.py  catch_encodings.py  catch_features.py  catch_inferences.py  catch_metrics.py  chain.py  chain_metrics.py  collect_trajectories.py  compare_encodings.py  compare_features.py  compute_probabilities.py  env.py  gpt3.py  line.py  main.py  maze.py  model.py  point_mass.py  space_invaders.py  space_invaders_metrics.py  todo.md  train.py  umbrella.py  umbrella_metrics.py  util.py
gqn/agent/: gpt3.py  model.py  train.py
gqn/compare_features/: base.py  catch.py  collect_trajectories.py  main.py
gqn/envs/: bandit.py  base_env.py  cartpole.py  catch.py  chain.py  umbrella.py
gqn/metrics/: encoder.py  metric.py  test_runner.py
gqn/rl/: api.py  baseline.py  common.py  gpt3.py  huggingface.py  lm.py  model.py  train.py
gqn/rl/api/: fast.py  open_ai.py
griffin/: base_env.py  bit_flip.py  cartpole.py  catch.py  chain.py  main.py  maze.py  point_mass.py  space_invaders.py
griffin/metrics/: encoder.py  metric.py  test_runner.py
griffin/rl/: baseline.py  common.py  huggingface.py  model.py  tabular_q.py  train.py
griffin/rl/api/: fast.py  local.py  open_ai.py
icpi/: bandit_metrics.py  base_env.py  catch.py  chain.py  chain_metrics.py  main.py  maze.py  point_mass.py  space_invaders.py  umbrella.py
icpi/metrics/: metric.py
icpi/rl/: common.py  lm.py  model.py  tabular_q.py  train.py
icpi/rl/api/: local.py  open_ai.py
