[tool.poetry]
name = "gqn"
version = "0.1.0"
description = ""
authors = ["Ethan Brooks <ethanabrooks@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.16.0"
gym = "^0.21.0"
numpy = "^1.22.3"
altair = "^4.2.0"
GitPython = "^3.1.27"
dollar-lambda = {git = "https://github.com/ethanabrooks/dollar-lambda.git", rev = "main"}
sweep-logger = {git = "https://github.com/run-tracker/sweep-logger.git", rev = "main"}
vega-charts = {git = "https://github.com/run-tracker/vega-charts.git", rev = "main"}
bsuite = "^0.3.5"
torch = {url = "https://download.pytorch.org/whl/cu111/torch-1.10.2%2Bcu111-cp39-cp39-linux_x86_64.whl"}
transformers = "4.18.0"
deepspeed = "0.6.1"
stable-baselines3 = "1.5.0"
ray = {version = "^1.13.0", extras = ["tune"]}

[tool.poetry.dev-dependencies]
ipython = "^8.2.0"
ipdb = "^0.13.9"
black = "^22.3.0"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
