[tool.poetry]
name = "icpi"
version = "0.1.0"
description = ""
authors = ["Ethan Brooks <ethanabrooks@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
gym = "^0.17.2"
openai = "^0.16.0"
sweep-logger = {git = "https://github.com/run-tracker/sweep-logger.git", rev = "main"}
vega-charts = {git = "https://github.com/run-tracker/vega-charts.git", rev = "main"}
dollar-lambda = {git = "https://github.com/ethanabrooks/dollar-lambda.git", rev = "main"}
requests-toolbelt = "^0.9.1"
pandas = "^2.0.0"
altair = "^4.2.2"
ray = {version = "^2.3.1", extras = ["tune"]}
transformers = "^4.28.1"
gitpython = "^3.1.31"
rich = "^13.3.4"
dm-env = "^1.6"
scipy = "1.9.1"
#bsuite = "^0.3.5"

[tool.poetry.dev-dependencies]
ipython = "^8.2.0"
ipdb = "^0.13.9"
black = "^22.3.0"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
